fix: retry connection timeouts for single-key configs and cleanup IDE warnings
- Add per-candidate connection retry counter (MAX_CONNECTION_RETRIES=1).
  On SocketTimeoutException, the mod now retries the same key/model once
  before giving up, so single-key setups recover from momentary API hangs.
  Counter resets when rotating to a new candidate, giving each candidate
  its own retry budget.

- When multiple keys are configured, timeout on one candidate correctly
  rotates to the next candidate (existing fix carried forward).

- Disconnect stale connection before each retry to avoid reusing a
  server-closed socket.

- Log concise warnings for intermediate retries; full stack trace only
  when all retry attempts are exhausted.

- Fix deprecated new URL(String) -> URI.create().toURL() in ChatGPTRequest.

- Remove unused imports in AdvancementHelper, LookControls, ModMenus,
  MixinVexEntity; remove unused LOGGER field in MixinWanderingTrader;
  remove unnecessary @SuppressWarnings in EntityRendererAccessor.

- Parameterize raw EntityType -> EntityType<?> in RarityItemCollector.

- Add @SuppressWarnings(deprecation) for Fabric getRootPath() fallback
  and @SuppressWarnings(unchecked) for version-safe Holder cast.

- Add tests: socketTimeoutWithSingleKeySetsConnectionError (2 calls),
  socketTimeoutSingleKeyRetriesAndSucceeds, socketTimeoutRetriesNextKeyAndSucceeds.

Bump mod_version 3.0.3 -> 3.0.4